--- a/index.html
+++ b/index.html
@@ -27,13 +27,13 @@
       <!-- Content Start -->
       <div class="container-fluid">
         <!-- Alert Start -->
-        <div class="alert alert-info" role="alert">Silahkan bagi peserta Proyek 3 untuk mengisi <b>pengajuan sidang</b> sampai dengan tanggal <b>22 Januari 2024, Pukul 23.59 WIB</b>. Jangan Sampai Terlambat!</div>
+        <div class="alert alert-info" role="alert">Silahkan bagi dosen pembimbing Proyek 3 untuk approve <b>pengajuan sidang</b> sampai tanggal <b>22 Januari 2024, Pukul 23.59 WIB</b>. Jangan Sampai Terlambat!</div>
         <!-- Alert End -->
         <div class="card">
           <div class="card-body d-flex flex-row justify-content-center align-items-center">
-              <img src="assets/images/logos/appesi-icon.png" alt="" width="15%" class="mr-4">
+              <img src="assets/images/logos/dosen.png" alt="" width="15%" class="mr-4">
               <div class="text-center">
-                  <h2 class="mb-4">Selamat Datang di Dashboard Mahasiswa</h2>
+                  <h2 class="mb-4">Selamat Datang di Dashboard Dosen</h2>
                   <h2 class="mb-4"><b>Aplikasi Pengajuan Sidang (APPESI) ULBI</b></h2>
               </div>
           </div>
