ganti title sidang proyek dosen

--- a/sidang_proyek.html
+++ b/sidang_proyek.html
@@ -27,7 +27,7 @@
 
       <div class="container-fluid">
         <h6 class="right-aligned" style="float: right">
-          <a href="index.html">Home</a> / Pengajuan Sidang Proyek
+          <a href="index.html">Home Dosen</a> / Pengajuan Sidang Proyek
         </h6>
         <h1 class="h3 mb-3"><b>Pengajuan Sidang Proyek</b></h1>
         <div class="container-fluid">
