--- a/static/sidebar.html
+++ b/static/sidebar.html
@@ -6,8 +6,8 @@
           <div class="container">
           <div class="row">
               <div class="col-md-12 text-center">
-              <a href="https://euis.ulbi.ac.id/APPESI/index.html" class="text-nowrap logo-img d-flex justify-content-center align-items-center">
-                  <img src="https://euis.ulbi.ac.id/APPESI/assets/images/logos/logo-ulbi.png" width="130" style="margin-top: 30px;"/>
+              <a href="https://euis.ulbi.ac.id/APPESI-admin/index.html" class="text-nowrap logo-img d-flex justify-content-center align-items-center">
+                  <img src="https://euis.ulbi.ac.id/APPESI-admin/assets/images/logos/logo-ulbi.png" width="130" style="margin-top: 30px;"/>
               </a>
               </div>
           </div>
@@ -26,7 +26,7 @@
             </span>
           </li>
           <li class="sidebar-item">
-            <a class="sidebar-link" href="https://euis.ulbi.ac.id/APPESI/index.html" aria-expanded="false">
+            <a class="sidebar-link" href="https://euis.ulbi.ac.id/APPESI-admin/index.html" aria-expanded="false">
               <span>
                 <i class="ti ti-layout-dashboard"></i>
               </span>
@@ -70,7 +70,7 @@
             </span>
           </li>
           <li class="sidebar-item">
-            <a class="sidebar-link" href="https://euis.ulbi.ac.id/APPESI/sidang_proyek.html" aria-expanded="false">
+            <a class="sidebar-link" href="https://euis.ulbi.ac.id/APPESI-admin/sidang_proyek.html" aria-expanded="false">
               <span>
                 <i class="ti ti-presentation-analytics"></i>
               </span>
@@ -136,7 +136,7 @@
           <div class="row">
               <div class="col-md-12 text-center">
               <a href="#" class="text-nowrap logo-img d-flex justify-content-center align-items-center">
-                  <img src="https://euis.ulbi.ac.id/APPESI/assets/images/logos/logo-ulbi.png" width="130" style="margin-top: 30px;"/>
+                  <img src="https://euis.ulbi.ac.id/APPESI-admin/assets/images/logos/logo-ulbi.png" width="130" style="margin-top: 30px;"/>
               </a>
               </div>
           </div>
