change href untuk ke laman proyek 3 dosen

--- a/sidang_proyek.html
+++ b/sidang_proyek.html
@@ -68,7 +68,7 @@
                   <div class="card-body">
                     <h5 class="card-title">Pengajuan Sidang</h5>
                     <p class="card-text">Terkait informasi pengajuan sidang proyek 3 ada di laman <a href="https://if.ulbi.ac.id">if.ulbi.ac.id</a>.</p>
-                    <a href="pengajuan/proyek_3.html" class="btn btn-primary">Ajukan Sidang</a>
+                    <a href="dosen/proyek_3.html" class="btn btn-primary">Ajukan Sidang</a>
                   </div>
                 </div>
               </div>
