penyesuaian konten mahasiswa bimbingan p3 (dosen)

--- a/dosen/mahasiswa_bimbingan_p3.html
+++ b/dosen/mahasiswa_bimbingan_p3.html
@@ -42,6 +42,7 @@
                               <th><h6>NPM</h6></th>
                               <th><h6>Posisi</h6></th>
                               <th><h6>Penguji</h6></th>
+                              <th><h6>Tanggal Sidang</h6></th>
                               <th><h6>Ajuan Sidang</h6></th>
                               <th><h6>Nilai Sidang</h6></th>
                               <th><h6>Action</h6></th>
@@ -60,6 +61,9 @@
                                   </td>
                                   <td>
                                       <p class="fw-bold mb-1">Syafrial Fachri Pane</p>
+                                  </td>
+                                  <td>
+                                      <p class="fw-bold mb-1">19 Januari 2024</p>
                                   </td>
                                   <td>
                                     <button type="button" class="btn btn-info m-1">Approve Sidang</button>
@@ -100,15 +104,11 @@
           </div>
       </div>
   </div>
+  <script src="../static/dosen/mahasiswa_bimbingan_p3.js" type="module"></script>
   <script src="../static/theme/bar/sidebar.js" type="module"></script>
   <script src="../static/theme/bar/navbar.js" type="module"></script>
   <script src="../assets/libs/jquery/dist/jquery.min.js"></script>
   <script src="../assets/libs/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
-  <script src="../assets/js/sidebarmenu.js"></script>
-  <script src="../assets/js/app.min.js"></script>
-  <script src="../assets/libs/apexcharts/dist/apexcharts.min.js"></script>
-  <script src="../assets/libs/simplebar/dist/simplebar.js"></script>
-  <script src="../assets/js/dashboard.js"></script>
 </body>
 
 </html>
