add column tanggal sidang

--- a/dosen/mahasiswa_uji_p3.html
+++ b/dosen/mahasiswa_uji_p3.html
@@ -42,6 +42,7 @@
                               <th><h6>NPM</h6></th>
                               <th><h6>Posisi</h6></th>
                               <th><h6>Pembimbing</h6></th>
+                              <th><h6>Tanggal Sidang</h6></th>
                               <th><h6>Ajuan Sidang</h6></th>
                               <th><h6>Nilai Sidang</h6></th>
                               <th><h6>Status Sidang</h6></th>
@@ -50,32 +51,6 @@
                             <!-- end table row-->
                           </thead>
                           <tbody id="tablebody">
-                              <tr style="text-align: center; vertical-align: middle">
-                                  <td>
-                                      <p class="fw-bold mb-1">1204077</p>
-                                      <p class="fw-bold mb-1">1204060</p>
-                                  </td>
-                                  <td>
-                                      <p class="fw-bold mb-1">Frontend</p>
-                                      <p class="fw-bold mb-1">Backend</p>
-                                  </td>
-                                  <td>
-                                      <p class="fw-bold mb-1">Syafrial Fachri Pane</p>
-                                  </td>
-                                  <td>
-                                    <button type="button" class="btn btn-info m-1">Approve Sidang</button>
-                                  </td>
-                                  <td>
-                                      <p class="fw-bold mb-1">90</p>
-                                      <p class="fw-bold mb-1">85</p>
-                                  </td>
-                                  <td>
-                                    <button type="button" class="btn btn-info m-1">Status Sidang</button>
-                                  </td>
-                                  <td>
-                                    <button type="button" class="btn btn-info m-1">Input Nilai</button>
-                                  </td>
-                              </tr>
                           </tbody>
                         </table>
                         <!-- end table -->
@@ -104,15 +79,11 @@
           </div>
       </div>
   </div>
+  <script src="../static/dosen/mahasiswa_uji_p3.js" type="module"></script>
   <script src="../static/theme/bar/sidebar.js" type="module"></script>
   <script src="../static/theme/bar/navbar.js" type="module"></script>
   <script src="../assets/libs/jquery/dist/jquery.min.js"></script>
   <script src="../assets/libs/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
-  <script src="../assets/js/sidebarmenu.js"></script>
-  <script src="../assets/js/app.min.js"></script>
-  <script src="../assets/libs/apexcharts/dist/apexcharts.min.js"></script>
-  <script src="../assets/libs/simplebar/dist/simplebar.js"></script>
-  <script src="../assets/js/dashboard.js"></script>
 </body>
 
 </html>
