create html untuk view jumlah pengajuan

--- a/index.html
+++ b/index.html
@@ -48,6 +48,7 @@
                   <table class="table">
                     <thead>
                       <tr style="text-align: center; vertical-align: middle">
+                        <th><h6>No</h6></th>
                         <th><h6>NPM Ke 1</h6></th>
                         <th><h6>NPM Ke 2</h6></th>
                         <th><h6>Pembimbing</h6></th>
@@ -81,6 +82,7 @@
                 <!-- end Button Pagination -->
               </div>
             </div>
+            <h7 class="fw-semibold" id="jumlahPengjuanSidang">Jumlah Pengajuan : </h7>
           </div>
         </div>
         <!-- Content End -->
