--- a/dosen/input_nilai_uji_p3.html
+++ b/dosen/input_nilai_uji_p3.html
@@ -27,9 +27,9 @@
 
       <div class="container-fluid">
         <h6 class="right-aligned" style="float: right">
-          <a href="index.html">Home Dosen</a> / <a href="">Penilaian Mahasiswa Bimbingan</a> / Proyek 3
+          <a href="index.html">Home Dosen</a> / <a href="">Penilaian Mahasiswa Uji</a> / Proyek 3
         </h6>
-        <h1 class="h3 mb-3"><b>Penilaian Mahasiswa Bimbingan</b></h1>
+        <h1 class="h3 mb-3"><b>Penilaian Mahasiswa Uji</b></h1>
         <div class="container-fluid">
           <div class="card">
             <div class="card-body">
