perbaikan content card sidang proyek dosen

--- a/sidang_proyek.html
+++ b/sidang_proyek.html
@@ -43,7 +43,7 @@
                   <img src="assets/images/backgrounds/proyek 1.jpg" class="card-img-top img-fluid" alt="...">
                   <div class="card-body">
                     <h5 class="card-title">Pengajuan Sidang</h5>
-                    <p class="card-text">Terkait informasi pengajuan sidang proyek 1 ada di laman <a href="https://if.ulbi.ac.id">if.ulbi.ac.id</a>.</p>
+                    <p class="card-text">Terkait informasi rekap pengajuan sidang proyek 1 ada pada laman ini.</p>
                     <a href="#" class="btn btn-primary" id="proyek1Btn">Ajukan Sidang</a>
                   </div>
                 </div>
@@ -56,7 +56,7 @@
                   <img src="assets/images/backgrounds/proyek 2.jpg" class="card-img-top img-fluid" alt="...">
                   <div class="card-body">
                     <h5 class="card-title">Pengajuan Sidang</h5>
-                    <p class="card-text">Terkait informasi pengajuan sidang proyek 2 ada di laman <a href="https://if.ulbi.ac.id">if.ulbi.ac.id</a>.</p>
+                    <p class="card-text">Terkait informasi rekap pengajuan sidang proyek 2 ada pada laman ini.</p>
                     <a href="#" class="btn btn-primary" id="proyek2Btn">Ajukan Sidang</a>
                   </div>
                 </div>
@@ -67,7 +67,7 @@
                   <img src="assets/images/backgrounds/proyek 3.jpg" class="card-img-top img-fluid" style="width: 300px;" alt="...">
                   <div class="card-body">
                     <h5 class="card-title">Pengajuan Sidang</h5>
-                    <p class="card-text">Terkait informasi pengajuan sidang proyek 3 ada di laman <a href="https://if.ulbi.ac.id">if.ulbi.ac.id</a>.</p>
+                    <p class="card-text">Terkait informasi rekap pengajuan sidang proyek 3 ada pada laman ini.</p>
                     <a href="dosen/proyek_3.html" class="btn btn-primary">Ajukan Sidang</a>
                   </div>
                 </div>
