--- a/static/sidebar.html
+++ b/static/sidebar.html
@@ -77,6 +77,14 @@
               <span class="hide-menu">Proyek</span>
             </a>
           </li>
+          <li class="sidebar-item">
+            <a class="sidebar-link" href="https://euis.ulbi.ac.id/APPESI-admin/revisi_sidang.html" aria-expanded="false">
+              <span>
+                <i class="ti ti-presentation-analytics"></i>
+              </span>
+              <span class="hide-menu">Proyek</span>
+            </a>
+          </li>
           <!-- <li class="sidebar-item">
             <a class="sidebar-link" href="#" aria-expanded="false">
               <span>
