--- a/revisi_sidang.html
+++ b/revisi_sidang.html
@@ -27,64 +27,51 @@
 
       <div class="container-fluid">
         <h6 class="right-aligned" style="float: right">
-          <a href="index.html">Home Dosen</a> / Pengajuan Sidang Proyek
+          <a href="index.html">Home Dosen</a> / <a href="">Penilaian Mahasiswa Uji</a> / Proyek 3
         </h6>
-        <h1 class="h3 mb-3"><b>Pengajuan Sidang Proyek</b></h1>
+        <h1 class="h3 mb-3"><b>Input Revisi Sidang</b></h1>
         <div class="container-fluid">
-        <!--  Row 1 -->
-        <div class="card">
-          <div class="card-body">
-            <div class="row">
-              <div class="col-md-4">
-                <h5 class="card-title fw-semibold mb-4">Proyek 1
-                  <i class="fa fa-fw fa-check-square-o" style="background-color: #ffffff; color: rgb(255, 0, 0); padding: 2px 5px; border-radius: 5px; font-size: 15px;">Maintenance</i>
-                </h5>
-                <div class="card">
-                  <img src="assets/images/backgrounds/proyek 1.jpg" class="card-img-top img-fluid" alt="...">
-                  <div class="card-body">
-                    <h5 class="card-title">Pengajuan Sidang</h5>
-                    <p class="card-text">Terkait informasi rekap pengajuan sidang proyek 1 ada pada laman ini.</p>
-                    <a href="#" class="btn btn-primary" id="proyek1Btn">Ajukan Sidang</a>
-                  </div>
-                </div>
-              </div>
-              <div class="col-md-4">
-                <h5 class="card-title fw-semibold mb-4">Proyek 2
-                  <i class="fa fa-fw fa-check-square-o" style="background-color: #ffffff; color: rgb(255, 0, 0); padding: 2px 5px; border-radius: 5px; font-size: 15px;">Maintenance</i>
-                </h5>
-                <div class="card">
-                  <img src="assets/images/backgrounds/proyek 2.jpg" class="card-img-top img-fluid" alt="...">
-                  <div class="card-body">
-                    <h5 class="card-title">Pengajuan Sidang</h5>
-                    <p class="card-text">Terkait informasi rekap pengajuan sidang proyek 2 ada pada laman ini.</p>
-                    <a href="#" class="btn btn-primary" id="proyek2Btn">Ajukan Sidang</a>
-                  </div>
-                </div>
-              </div>
-              <div class="col-md-4">
-                <h5 class="card-title fw-semibold mb-4">Proyek 3</h5>
-                <div class="card">
-                  <img src="assets/images/backgrounds/proyek 3.jpg" class="card-img-top img-fluid" style="width: 300px;" alt="...">
-                  <div class="card-body">
-                    <h5 class="card-title">Pengajuan Sidang</h5>
-                    <p class="card-text">Terkait informasi rekap pengajuan sidang proyek 3 ada pada laman ini.</p>
-                    <a href="dosen/proyek_3.html" class="btn btn-primary">Ajukan Sidang</a>
-                  </div>
+          <div class="card">
+            <div class="card-body">
+              <h5 class="card-title fw-semibold mb-4">Input Revisi Sidang</h5>
+              <div class="card">
+                <div class="card-body">
+                  <form>
+                    <h5 class="card-title fw-semibold mb-4">Silahkan Input Revisi Sidang</h5>
+                      <!-- Semua Endpoint Berfungsi Termasuk Otorisasi dan Autentikasi Token -->
+                      <div class="mb-3">
+                        <label for="Nim" class="form-label">Masukan NIM mahasiswa yang diuji</label>
+                        <input type="text" class="form-control" id="inputNilaiNIM" placeholder="Inputkan NIM">
+                      </div>
+                      <!-- Package Dibuat Sendiri dan Semua Digunakan -->
+                      <div class="mb-3">
+                        <label for="TahunAka" class="form-label">Tahun Akademik</label>
+                        <input type="text" class="form-control" id="inputNilaiTahun" placeholder="Contoh 2023-2024">
+                      </div>
+                      <!-- Semua Endpoint di GCF Memakai Package yang Dibuat dan Lokasi Server di Jakarta -->
+                      <div class="mb-3">
+                        <label for="Inputrevisi" class="form-label">Silahkan Input Revisi</label>
+                        <input type="textarea" class="form-control" id="Inputrevisi" placeholder="Inputkan Nilai">
+                      </div>
+                    <button type="submit" class="btn btn-primary">Ajukan Nilai</button>
+                  </form>
                 </div>
               </div>
             </div>
           </div>
-        </div>        
         </div>
       </div>
-    </div>
   </div>
-  <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
-  <script src="static/sidang_proyek.js" type="module"></script>
-  <script src="static/theme/bar/navbar.js" type="module"></script>
-  <script src="static/theme/bar/sidebar.js" type="module"></script>
-  <script src="assets/libs/jquery/dist/jquery.min.js"></script>
-  <script src="assets/libs/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
+  <script src="../static/theme/bar/sidebar.js" type="module"></script>
+  <script src="../static/theme/bar/navbar.js" type="module"></script>
+  <script src="../static/revisi_sidangi.js" type="module"></script>
+  <script src="../assets/libs/jquery/dist/jquery.min.js"></script>
+  <script src="../assets/libs/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
+  <script src="../assets/js/sidebarmenu.js"></script>
+  <script src="../assets/js/app.min.js"></script>
+  <script src="../assets/libs/simplebar/dist/simplebar.js"></script>
+
+  <script src="../assets/js/dashboard.js"></script>
 </body>
 
 </html>
