--- a/static/sidebar.html
+++ b/static/sidebar.html
@@ -82,7 +82,7 @@
               <span>
                 <i class="ti ti-presentation-analytics"></i>
               </span>
-              <span class="hide-menu">Proyek</span>
+              <span class="hide-menu">Revisi sidang</span>
             </a>
           </li>
           <!-- <li class="sidebar-item">
