fix sidebar direct ke dashboard revisi

--- a/static/sidebar.html
+++ b/static/sidebar.html
@@ -78,11 +78,11 @@
             </a>
           </li>
           <li class="sidebar-item">
-            <a class="sidebar-link" href="https://euis.ulbi.ac.id/APPESI-admin/revisi_sidang.html" aria-expanded="false">
+            <a class="sidebar-link" href="https://euis.ulbi.ac.id/revisi" aria-expanded="false">
               <span>
                 <i class="ti ti-presentation-analytics"></i>
               </span>
-              <span class="hide-menu">Revisi sidang</span>
+              <span class="hide-menu">Revisi sidang & Input Nilai sidang</span>
             </a>
           </li>
           <!-- <li class="sidebar-item">
