--- a/dosen/mahasiswa_bimbingan_p3.html
+++ b/dosen/mahasiswa_bimbingan_p3.html
@@ -44,9 +44,9 @@
                               <th><h6>Posisi</h6></th>
                               <th><h6>Penguji</h6></th>
                               <th><h6>Tanggal Sidang</h6></th>
-                              <th><h6>Ajuan Sidang</h6></th>
-                              <th><h6>Nilai Sidang</h6></th>
-                              <th><h6>Action</h6></th>
+                              <!-- <th><h6>Ajuan Sidang</h6></th> -->
+                              <!-- <th><h6>Nilai Sidang</h6></th> -->
+                              <!-- <th><h6>Action</h6></th> -->
                             </tr>
                             <!-- end table row-->
                           </thead>
