--- a/dosen/mahasiswa_uji_p3.html
+++ b/dosen/mahasiswa_uji_p3.html
@@ -44,8 +44,8 @@
                               <th><h6>Posisi</h6></th>
                               <th><h6>Pembimbing</h6></th>
                               <th><h6>Tanggal Sidang</h6></th>
-                              <th><h6>Nilai Sidang</h6></th>
-                              <th><h6>Action</h6></th>
+                              <!-- <th><h6>Nilai Sidang</h6></th> -->
+                              <!-- <th><h6>Action</h6></th> -->
                             </tr>
                             <!-- end table row-->
                           </thead>
