--- a/static/sidebar.html
+++ b/static/sidebar.html
@@ -1,7 +1,7 @@
 <aside class="left-sidebar">
-  <!-- Sidebar Mahasiswa Start -->
+  <!-- Sidebar Dosen Start -->
     <!-- Sidebar scroll-->
-    <div id="sidebar-mahasiswa">
+    <div id="sidebar-dosen">
       <div class="brand-logo d-flex align-items-center justify-content-between">
           <div class="container">
           <div class="row">
@@ -135,136 +135,4 @@
       </nav>
       <!-- End Sidebar navigation -->
     </div>
-    <!-- Sidebar Mahasiswa End -->
-
-    <!-- Sidebar Dosen Start -->
-    <div id="sidebar-dosen" hidden>
-      <div class="brand-logo d-flex align-items-center justify-content-between">
-          <div class="container">
-          <div class="row">
-              <div class="col-md-12 text-center">
-              <a href="#" class="text-nowrap logo-img d-flex justify-content-center align-items-center">
-                  <img src="https://euis.ulbi.ac.id/APPESI-admin/assets/images/logos/logo-ulbi.png" width="130" style="margin-top: 30px;"/>
-              </a>
-              </div>
-          </div>
-          </div>
-        <div class="close-btn d-xl-none d-block sidebartoggler cursor-pointer" id="sidebarCollapse">
-          <i class="ti ti-x fs-8"></i>
-        </div>
-      </div>
-      <!-- Sidebar navigation-->
-      <nav class="sidebar-nav scroll-sidebar" data-simplebar="">
-        <ul id="sidebarnav">
-          <li class="nav-small-cap">
-            <i class="ti ti-dots nav-small-cap-icon fs-4"></i>
-            <span class="hide-menu">Home
-              <span class="badge bg-warning-500 capitalize" id="badgeJalur" style="color: rgb(255, 0, 0); font-size: 9px; padding: 1px 4px; border-radius: 5px;">Maintenance</span>
-            </span>
-          </li>
-          <li class="sidebar-item">
-            <a class="sidebar-link" href="#" aria-expanded="false">
-              <span>
-                <i class="ti ti-layout-dashboard"></i>
-              </span>
-              <span class="hide-menu">Dashboard</span>
-            </a>
-          </li>
-          <!-- <li class="nav-small-cap">
-            <i class="ti ti-dots nav-small-cap-icon fs-4"></i>
-            <span class="hide-menu">PENDAFTARAN
-              <span class="badge bg-warning-500 capitalize" id="badgeJalur" style="color: rgb(255, 0, 0); font-size: 9px; padding: 1px 4px; border-radius: 5px;">Maintenance</span>
-            </span>
-          </li>
-          <li class="sidebar-item">
-            <a class="sidebar-link" href="./ui-buttons.html" aria-expanded="false">
-              <span>
-                <i class="ti ti-presentation-analytics"></i>
-              </span>
-              <span class="hide-menu">Proyek</span>
-            </a>
-          </li>
-          <li class="sidebar-item">
-            <a class="sidebar-link" href="./ui-forms.html" aria-expanded="false">
-              <span>
-                <i class="ti ti-clipboard-list"></i>
-              </span>
-              <span class="hide-menu">Internship</span>
-            </a>
-          </li>
-          <li class="sidebar-item">
-              <a class="sidebar-link" href="./ui-typography.html" aria-expanded="false">
-                <span>
-                  <i class="ti ti-school"></i>
-                </span>
-                <span class="hide-menu">Tugas Akhir</span>
-              </a>
-            </li> -->
-          <li class="nav-small-cap">
-            <i class="ti ti-dots nav-small-cap-icon fs-4"></i>
-            <span class="hide-menu">PENGAJUAN SIDANG
-              <span class="badge bg-warning-500 capitalize" id="badgeJalur" style="color: rgb(255, 0, 0); font-size: 9px; padding: 1px 4px; border-radius: 5px;">Maintenance</span>
-            </span>
-          </li>
-          <li class="sidebar-item">
-            <a class="sidebar-link" href="#" aria-expanded="false">
-              <span>
-                <i class="ti ti-presentation-analytics"></i>
-              </span>
-              <span class="hide-menu">Proyek</span>
-            </a>
-          </li>
-          <li class="sidebar-item">
-            <a class="sidebar-link" href="#" aria-expanded="false">
-              <span>
-                <i class="ti ti-clipboard-list"></i>
-              </span>
-              <span class="hide-menu">Internship</span>
-            </a>
-          </li>
-          <li class="sidebar-item">
-              <a class="sidebar-link" href="#" aria-expanded="false">
-                <span>
-                  <i class="ti ti-school"></i>
-                </span>
-                <span class="hide-menu">Tugas Akhir</span>
-              </a>
-          </li>
-          <!-- <li class="nav-small-cap">
-            <i class="ti ti-dots nav-small-cap-icon fs-4"></i>
-            <span class="hide-menu">REVISI & PENILAIAN
-              <span class="badge bg-warning-500 capitalize" id="badgeJalur" style="color: rgb(255, 0, 0); font-size: 9px; padding: 1px 4px; border-radius: 5px;">Maintenance</span>
-            </span>
-          </li>
-          <li class="sidebar-item">
-            <a class="sidebar-link" href="#" aria-expanded="false">
-              <span>
-                <i class="ti ti-presentation-analytics"></i>
-              </span>
-              <span class="hide-menu">Proyek</span>
-            </a>
-          </li>
-          <li class="sidebar-item">
-            <a class="sidebar-link" href="#" aria-expanded="false">
-              <span>
-                <i class="ti ti-clipboard-list"></i>
-              </span>
-              <span class="hide-menu">Internship</span>
-            </a>
-          </li>
-          <li class="sidebar-item">
-              <a class="sidebar-link" href="#" aria-expanded="false">
-                <span>
-                  <i class="ti ti-school"></i>
-                </span>
-                <span class="hide-menu">Tugas Akhir</span>
-              </a>
-          </li> -->
-        </ul>
-      </nav>
-      <!-- End Sidebar navigation -->
-    </div>
     <!-- Sidebar Dosen End -->
-  </aside>
-
-  <script src="../static/sidebar.js" type="module"></script>
