create submenu revisi & nilai

--- a/static/sidebar.html
+++ b/static/sidebar.html
@@ -101,9 +101,9 @@
                 <span class="hide-menu">Tugas Akhir</span>
               </a>
           </li> -->
-          <!-- <li class="nav-small-cap">
+          <li class="nav-small-cap">
             <i class="ti ti-dots nav-small-cap-icon fs-4"></i>
-            <span class="hide-menu">REVISI & PENILAIAN
+            <span class="hide-menu">REVISI SIDANG
               <span class="badge bg-warning-500 capitalize" id="badgeJalur" style="color: rgb(255, 0, 0); font-size: 9px; padding: 1px 4px; border-radius: 5px;">Maintenance</span>
             </span>
           </li>
@@ -123,7 +123,37 @@
               <span class="hide-menu">Internship</span>
             </a>
           </li>
+          <!-- <li class="sidebar-item">
+              <a class="sidebar-link" href="#" aria-expanded="false">
+                <span>
+                  <i class="ti ti-school"></i>
+                </span>
+                <span class="hide-menu">Tugas Akhir</span>
+              </a>
+          </li> -->
+          <li class="nav-small-cap">
+            <i class="ti ti-dots nav-small-cap-icon fs-4"></i>
+            <span class="hide-menu">NILAI SIDANG
+              <span class="badge bg-warning-500 capitalize" id="badgeJalur" style="color: rgb(255, 0, 0); font-size: 9px; padding: 1px 4px; border-radius: 5px;">Maintenance</span>
+            </span>
+          </li>
           <li class="sidebar-item">
+            <a class="sidebar-link" href="#" aria-expanded="false">
+              <span>
+                <i class="ti ti-presentation-analytics"></i>
+              </span>
+              <span class="hide-menu">Proyek</span>
+            </a>
+          </li>
+          <li class="sidebar-item">
+            <a class="sidebar-link" href="#" aria-expanded="false">
+              <span>
+                <i class="ti ti-clipboard-list"></i>
+              </span>
+              <span class="hide-menu">Internship</span>
+            </a>
+          </li>
+          <!-- <li class="sidebar-item">
               <a class="sidebar-link" href="#" aria-expanded="false">
                 <span>
                   <i class="ti ti-school"></i>
