--- a/static/sidebar.html
+++ b/static/sidebar.html
@@ -112,25 +112,9 @@
               <span>
                 <i class="ti ti-presentation-analytics"></i>
               </span>
-              <span class="hide-menu">Proyek</span>
+              <span class="hide-menu">Input Revisi Sidang</span>
             </a>
           </li>
-          <li class="sidebar-item">
-            <a class="sidebar-link" href="#" aria-expanded="false">
-              <span>
-                <i class="ti ti-clipboard-list"></i>
-              </span>
-              <span class="hide-menu">Internship</span>
-            </a>
-          </li>
-          <!-- <li class="sidebar-item">
-              <a class="sidebar-link" href="#" aria-expanded="false">
-                <span>
-                  <i class="ti ti-school"></i>
-                </span>
-                <span class="hide-menu">Tugas Akhir</span>
-              </a>
-          </li> -->
           <li class="nav-small-cap">
             <i class="ti ti-dots nav-small-cap-icon fs-4"></i>
             <span class="hide-menu">NILAI SIDANG
