--- a/static/sidebar.html
+++ b/static/sidebar.html
@@ -108,7 +108,7 @@
             </span>
           </li>
           <li class="sidebar-item">
-            <a class="sidebar-link" href="#" aria-expanded="false">
+            <a class="sidebar-link" href="https://euis.ulbi.ac.id/APPESI-admin/revisi_sidang.html" aria-expanded="false">
               <span>
                 <i class="ti ti-presentation-analytics"></i>
               </span>
