add nilai sidang proyek & internship

--- a/static/sidebar.html
+++ b/static/sidebar.html
@@ -122,7 +122,7 @@
             </span>
           </li>
           <li class="sidebar-item">
-            <a class="sidebar-link" href="#" aria-expanded="false">
+            <a class="sidebar-link" href="https://euis.ulbi.ac.id/APPESI-admin/nilai_sidang_proyek.html" aria-expanded="false">
               <span>
                 <i class="ti ti-presentation-analytics"></i>
               </span>
@@ -130,7 +130,7 @@
             </a>
           </li>
           <li class="sidebar-item">
-            <a class="sidebar-link" href="#" aria-expanded="false">
+            <a class="sidebar-link" href="https://euis.ulbi.ac.id/APPESI-admin/nilai_sidang_internship.html" aria-expanded="false">
               <span>
                 <i class="ti ti-clipboard-list"></i>
               </span>
