--- a/revisi_sidang.html
+++ b/revisi_sidang.html
@@ -66,7 +66,7 @@
                         <label for="inputRevisi" class="form-label">Silahkan Input Revisi</label>
                         <input type="textarea" class="form-control" id="inputRevisi" placeholder="Masukkan Revisi" >
                       </div>
-                    <button type="submit" class="btn btn-primary">Ajukan Nilai</button>
+                    <button type="submit" class="btn btn-primary">Input Revisi</button>
                   </form>
                 </div>
               </div>
@@ -77,7 +77,8 @@
   </div>
   <script src="static/theme/bar/sidebar.js" type="module"></script>
   <script src="static/theme/bar/navbar.js" type="module"></script>
-  <script src="static/revisi_sidangi.js" type="module"></script>
+  <script src="static/revisi_sidang.js" type="module"></script>
+  <script src="static/style_revisi_sidang.js"></script>
   <script src="assets/libs/jquery/dist/jquery.min.js"></script>
   <script src="assets/libs/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
   <script src="assets/js/sidebarmenu.js"></script>
