perbaikan href to input nilai p3.html

--- a/nilai_sidang_proyek.html
+++ b/nilai_sidang_proyek.html
@@ -68,7 +68,7 @@
                   <div class="card-body">
                     <h5 class="card-title">Pengajuan Sidang</h5>
                     <p class="card-text">Terkait input nilai sidang proyek 3 ada pada laman ini.</p>
-                    <a href="dosen/proyek_3.html" class="btn btn-primary">Input Nilai</a>
+                    <a href="dosen/input_nilai_p3.html" class="btn btn-primary">Input Nilai</a>
                   </div>
                 </div>
               </div>
