perbaikan nilai sidang internship html

--- a/nilai_sidang_internship.html
+++ b/nilai_sidang_internship.html
@@ -35,20 +35,18 @@
         <div class="card">
           <div class="card-body">
             <div class="row">
-              <div class="col-md-4">
-                <h5 class="card-title fw-semibold mb-4">Internship 1
-                  <i class="fa fa-fw fa-check-square-o" style="background-color: #ffffff; color: rgb(255, 0, 0); padding: 2px 5px; border-radius: 5px; font-size: 15px;">Maintenance</i>
-                </h5>
+              <div class="col-md-6">
+                <h5 class="card-title fw-semibold mb-4">Internship 1</h5>
                 <div class="card">
                   <img src="assets/images/backgrounds/proyek 1.jpg" class="card-img-top img-fluid" alt="...">
                   <div class="card-body">
                     <h5 class="card-title">Nilai Sidang</h5>
                     <p class="card-text">Terkait input nilai sidang internship 1 ada pada laman ini.</p>
-                    <a href="#" class="btn btn-primary" id="internship1Btn">Input Nilai</a>
+                    <a href="dosen/input_nilai_i1.html" class="btn btn-primary">Input Nilai</a>
                   </div>
                 </div>
               </div>
-              <div class="col-md-4">
+              <div class="col-md-6">
                 <h5 class="card-title fw-semibold mb-4">Internship 2
                   <i class="fa fa-fw fa-check-square-o" style="background-color: #ffffff; color: rgb(255, 0, 0); padding: 2px 5px; border-radius: 5px; font-size: 15px;">Maintenance</i>
                 </h5>
@@ -58,17 +56,6 @@
                     <h5 class="card-title">Nilai Sidang</h5>
                     <p class="card-text">Terkait input nilai sidang Internship 2 ada pada laman ini.</p>
                     <a href="#" class="btn btn-primary" id="internship2Btn">Input Nilai</a>
-                  </div>
-                </div>
-              </div>
-              <div class="col-md-4">
-                <h5 class="card-title fw-semibold mb-4">Internship 3</h5>
-                <div class="card">
-                  <img src="assets/images/backgrounds/proyek 3.jpg" class="card-img-top img-fluid" style="width: 300px;" alt="...">
-                  <div class="card-body">
-                    <h5 class="card-title">Pengajuan Sidang</h5>
-                    <p class="card-text">Terkait input nilai sidang internship 3 ada pada laman ini.</p>
-                    <a href="dosen/input_nilai_p3.html" class="btn btn-primary">Input Nilai</a>
                   </div>
                 </div>
               </div>
