perbaikan nilai sidang proyek html

--- a/revisi_sidang.html
+++ b/revisi_sidang.html
@@ -40,7 +40,7 @@
                       <!-- Masukan NIM mahasiswa yang diuji -->
                       <div class="mb-3">
                         <label for="npm" class="form-label">Masukan NPM mahasiswa yang diuji</label>
-                        <input type="text" class="form-control" id="inputNilaiNPM" placeholder="Masukkan NIM">
+                        <input type="text" class="form-control" id="inputNilaiNPM" placeholder="Masukkan NPM">
                       </div>
                       <!-- Tahun Akademik -->
                       <div class="mb-3">
