--- a/revisi_sidang.html
+++ b/revisi_sidang.html
@@ -75,6 +75,7 @@
         </div>
       </div>
   </div>
+  <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
   <script src="static/theme/bar/sidebar.js" type="module"></script>
   <script src="static/theme/bar/navbar.js" type="module"></script>
   <script src="static/revisi_sidang.js" type="module"></script>
