add id form revisi sidang

--- a/revisi_sidang.html
+++ b/revisi_sidang.html
@@ -36,7 +36,7 @@
               <h5 class="card-title fw-semibold mb-4">Input Revisi Sidang</h5>
               <div class="card">
                 <div class="card-body">
-                  <form>
+                  <form id="form">
                       <!-- Masukan NIM mahasiswa yang diuji -->
                       <div class="mb-3">
                         <label for="npm" class="form-label">Masukan NPM mahasiswa yang diuji</label>
@@ -50,7 +50,7 @@
                       </div>
                       <!-- Input Tipe Bimbingan -->
                       <div class="mb-3">
-                        <label for="tahun_akademik" class="form-label">Input Tipe Bimbingan</label>
+                        <label for="selectTipeBimbingan" class="form-label">Input Tipe Bimbingan</label>
                         <select class="form-select" id="selectTipeBimbingan">
                             <option value="">Masukkan Tipe Bimbingan</option>
                             <option value="p1">Proyek 1</option>
