--- a/dosen/input_nilai_p3.html
+++ b/dosen/input_nilai_p3.html
@@ -126,6 +126,8 @@
         </div>
       </div>
   </div>
+  <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+  <script src="../static/dosen/input_nilai_p3.js" type="module"></script>
   <script src="../static/theme/bar/navbar.js" type="module"></script>
   <script src="../static/theme/bar/sidebar.js" type="module"></script>
   <script src="../static/style/style_input_nilai_p3.js"></script>
