perbaikan revisi sidang html js

--- a/revisi_sidang.html
+++ b/revisi_sidang.html
@@ -64,7 +64,7 @@
                       <!-- Silahkan Input Revisi -->
                       <div class="mb-3">
                         <label for="inputRevisi" class="form-label">Silahkan Input Revisi</label>
-                        <input type="textarea" class="form-control" id="inputRevisi" placeholder="Masukkan Revisi" >
+                        <textarea class="form-control" id="inputRevisi" placeholder="Masukkan Revisi"></textarea>
                       </div>
                     <button type="submit" class="btn btn-primary">Input Revisi</button>
                   </form>
