hide option proyek 1,2, i2, dan ta

--- a/revisi_sidang.html
+++ b/revisi_sidang.html
@@ -53,12 +53,12 @@
                         <label for="selectTipeBimbingan" class="form-label">Input Tipe Bimbingan</label>
                         <select class="form-select" id="selectTipeBimbingan">
                             <option value="">Masukkan Tipe Bimbingan</option>
-                            <option value="p1">Proyek 1</option>
-                            <option value="p2">Proyek 2</option>
+                            <!-- <option value="p1">Proyek 1</option>
+                            <option value="p2">Proyek 2</option> -->
                             <option value="p3">Proyek 3</option>
                             <option value="i1">Internship 1</option>
-                            <option value="i2">Internship 2</option>
-                            <option value="ta">Tugas Akhir</option>
+                            <!-- <option value="i2">Internship 2</option>
+                            <option value="ta">Tugas Akhir</option> -->
                           </select>
                       </div>
                       <!-- Silahkan Input Revisi -->
