--- a/dosen/input_nilai_i1.html
+++ b/dosen/input_nilai_i1.html
@@ -99,6 +99,7 @@
         </div>
       </div>
   </div>
+  <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
   <script src="../static/dosen/input_nilai_i1.js" type="module"></script>
   <script src="../static/style/style_input_nilai_i1.js"></script>
   <script src="../static/theme/bar/navbar.js" type="module"></script>
