coba perbaikan sidebar

--- a/static/sidebar.html
+++ b/static/sidebar.html
@@ -1,7 +1,7 @@
 <aside class="left-sidebar">
   <!-- Sidebar Dosen Start -->
     <!-- Sidebar scroll-->
-    <div id="sidebar-dosen">
+    <div>
       <div class="brand-logo d-flex align-items-center justify-content-between">
           <div class="container">
           <div class="row">
