hide all sidebar & navbar

--- a/dosen/proyek_3.html
+++ b/dosen/proyek_3.html
@@ -69,8 +69,8 @@
         </div>
       </div>
   </div>
-  <script src="../static/theme/bar/navbar.js" type="module"></script>
-  <script src="../static/theme/bar/sidebar.js" type="module"></script>
+  <!-- <script src="../static/theme/bar/navbar.js" type="module"></script>
+  <script src="../static/theme/bar/sidebar.js" type="module"></script> -->
   <script src="../assets/libs/jquery/dist/jquery.min.js"></script>
   <script src="../assets/libs/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
 </body>
