--- a/dosen/input_nilai_i1.html
+++ b/dosen/input_nilai_i1.html
@@ -102,8 +102,8 @@
   <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
   <script src="../static/dosen/input_nilai_i1.js" type="module"></script>
   <script src="../static/style/style_input_nilai_i1.js"></script>
-  <script src="../static/theme/bar/navbar.js" type="module"></script>
-  <script src="../static/theme/bar/sidebar.js" type="module"></script>
+  <!-- <script src="../static/theme/bar/navbar.js" type="module"></script>
+  <script src="../static/theme/bar/sidebar.js" type="module"></script> -->
   <script src="../static/style/style_input_nilai_p3.js"></script>
   <script src="../assets/libs/jquery/dist/jquery.min.js"></script>
   <script src="../assets/libs/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
