--- a/dosen/input_nilai_p3.html
+++ b/dosen/input_nilai_p3.html
@@ -4,8 +4,8 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>APPESI ULBI</title>
-  <link rel="shortcut icon" type="image/png" href="../assets/images/logos/favicon-ulbi.png" />
+  <title>Modernize Free</title>
+  <link rel="shortcut icon" type="image/png" href="../assets/images/logos/favicon.png" />
   <link rel="stylesheet" href="../assets/css/styles.min.css" />
 </head>
 
@@ -13,17 +13,197 @@
   <!--  Body Wrapper -->
   <div class="page-wrapper" id="main-wrapper" data-layout="vertical" data-navbarbg="skin6" data-sidebartype="full"
     data-sidebar-position="fixed" data-header-position="fixed">
+      <!-- Sidebar Start -->
+      <aside class="left-sidebar" id="sidebar">
+        <!-- Sidebar Dosen Start -->
+          <!-- Sidebar scroll-->
+          <div>
+            <div class="brand-logo d-flex align-items-center justify-content-between">
+                <div class="container">
+                <div class="row">
+                    <div class="col-md-12 text-center">
+                    <a href="https://euis.ulbi.ac.id/APPESI-admin/index.html" class="text-nowrap logo-img d-flex justify-content-center align-items-center">
+                        <img src="https://euis.ulbi.ac.id/APPESI-admin/assets/images/logos/logo-ulbi.png" width="130" style="margin-top: 30px;"/>
+                    </a>
+                    </div>
+                </div>
+                </div>
+              <div class="close-btn d-xl-none d-block sidebartoggler cursor-pointer" id="sidebarCollapse">
+                <i class="ti ti-x fs-8"></i>
+              </div>
+            </div>
+            <!-- Sidebar navigation-->
+            <nav class="sidebar-nav scroll-sidebar" data-simplebar="">
+              <ul id="sidebarnav">
+                <li class="nav-small-cap">
+                  <i class="ti ti-dots nav-small-cap-icon fs-4"></i>
+                  <span class="hide-menu">Home
+                    <span class="badge bg-warning-500 capitalize" id="badgeJalur" style="color: rgb(255, 0, 0); font-size: 9px; padding: 1px 4px; border-radius: 5px;">Maintenance</span>
+                  </span>
+                </li>
+                <li class="sidebar-item">
+                  <a class="sidebar-link" href="https://euis.ulbi.ac.id/APPESI-admin/index.html" aria-expanded="false">
+                    <span>
+                      <i class="ti ti-layout-dashboard"></i>
+                    </span>
+                    <span class="hide-menu">Dashboard</span>
+                  </a>
+                </li>
+                <!-- <li class="nav-small-cap">
+                  <i class="ti ti-dots nav-small-cap-icon fs-4"></i>
+                  <span class="hide-menu">PENDAFTARAN
+                    <span class="badge bg-warning-500 capitalize" id="badgeJalur" style="color: rgb(255, 0, 0); font-size: 9px; padding: 1px 4px; border-radius: 5px;">Maintenance</span>
+                  </span>
+                </li>
+                <li class="sidebar-item">
+                  <a class="sidebar-link" href="./ui-buttons.html" aria-expanded="false">
+                    <span>
+                      <i class="ti ti-presentation-analytics"></i>
+                    </span>
+                    <span class="hide-menu">Proyek</span>
+                  </a>
+                </li>
+                <li class="sidebar-item">
+                  <a class="sidebar-link" href="./ui-forms.html" aria-expanded="false">
+                    <span>
+                      <i class="ti ti-clipboard-list"></i>
+                    </span>
+                    <span class="hide-menu">Internship</span>
+                  </a>
+                </li>
+                <li class="sidebar-item">
+                    <a class="sidebar-link" href="./ui-typography.html" aria-expanded="false">
+                      <span>
+                        <i class="ti ti-school"></i>
+                      </span>
+                      <span class="hide-menu">Tugas Akhir</span>
+                    </a>
+                  </li> -->
+                <li class="nav-small-cap">
+                  <i class="ti ti-dots nav-small-cap-icon fs-4"></i>
+                  <span class="hide-menu">PENGAJUAN SIDANG
+                    <span class="badge bg-warning-500 capitalize" id="badgeJalur" style="color: rgb(255, 0, 0); font-size: 9px; padding: 1px 4px; border-radius: 5px;">Maintenance</span>
+                  </span>
+                </li>
+                <li class="sidebar-item">
+                  <a class="sidebar-link" href="https://euis.ulbi.ac.id/APPESI-admin/sidang_proyek.html" aria-expanded="false">
+                    <span>
+                      <i class="ti ti-presentation-analytics"></i>
+                    </span>
+                    <span class="hide-menu">Proyek</span>
+                  </a>
+                </li>
+                <li class="sidebar-item">
+                  <a class="sidebar-link" href="https://euis.ulbi.ac.id/revisi" aria-expanded="false">
+                    <span>
+                      <i class="ti ti-presentation-analytics"></i>
+                    </span>
+                    <span class="hide-menu">Revisi sidang & Input Nilai sidang</span>
+                  </a>
+                </li>
+                <!-- <li class="sidebar-item">
+                  <a class="sidebar-link" href="#" aria-expanded="false">
+                    <span>
+                      <i class="ti ti-clipboard-list"></i>
+                    </span>
+                    <span class="hide-menu">Internship</span>
+                  </a>
+                </li>
+                <li class="sidebar-item">
+                    <a class="sidebar-link" href="#" aria-expanded="false">
+                      <span>
+                        <i class="ti ti-school"></i>
+                      </span>
+                      <span class="hide-menu">Tugas Akhir</span>
+                    </a>
+                </li> -->
+                <li class="nav-small-cap">
+                  <i class="ti ti-dots nav-small-cap-icon fs-4"></i>
+                  <span class="hide-menu">REVISI SIDANG
+                    <span class="badge bg-warning-500 capitalize" id="badgeJalur" style="color: rgb(255, 0, 0); font-size: 9px; padding: 1px 4px; border-radius: 5px;">Maintenance</span>
+                  </span>
+                </li>
+                <li class="sidebar-item">
+                  <a class="sidebar-link" href="https://euis.ulbi.ac.id/APPESI-admin/revisi_sidang.html" aria-expanded="false">
+                    <span>
+                      <i class="ti ti-presentation-analytics"></i>
+                    </span>
+                    <span class="hide-menu">Input Revisi Sidang</span>
+                  </a>
+                </li>
+                <li class="nav-small-cap">
+                  <i class="ti ti-dots nav-small-cap-icon fs-4"></i>
+                  <span class="hide-menu">NILAI SIDANG
+                    <span class="badge bg-warning-500 capitalize" id="badgeJalur" style="color: rgb(255, 0, 0); font-size: 9px; padding: 1px 4px; border-radius: 5px;">Maintenance</span>
+                  </span>
+                </li>
+                <li class="sidebar-item">
+                  <a class="sidebar-link" href="https://euis.ulbi.ac.id/APPESI-admin/nilai_sidang_proyek.html" aria-expanded="false">
+                    <span>
+                      <i class="ti ti-presentation-analytics"></i>
+                    </span>
+                    <span class="hide-menu">Proyek</span>
+                  </a>
+                </li>
+                <li class="sidebar-item">
+                  <a class="sidebar-link" href="https://euis.ulbi.ac.id/APPESI-admin/nilai_sidang_internship.html" aria-expanded="false">
+                    <span>
+                      <i class="ti ti-clipboard-list"></i>
+                    </span>
+                    <span class="hide-menu">Internship</span>
+                  </a>
+                </li>
+                <!-- <li class="sidebar-item">
+                    <a class="sidebar-link" href="#" aria-expanded="false">
+                      <span>
+                        <i class="ti ti-school"></i>
+                      </span>
+                      <span class="hide-menu">Tugas Akhir</span>
+                    </a>
+                </li> -->
+              </ul>
+            </nav>
+            <!-- End Sidebar navigation -->
+          </div>
+          <!-- Sidebar Dosen End -->
+      </aside>    
+      <!--  Sidebar End -->
+      <!--  Main wrapper -->
+      <div class="body-wrapper">
 
-     <!-- Sidebar Start -->
-     <div class="sidebar"></div>
-     <!--  Sidebar End -->
- 
-     <!--  Main wrapper -->
-     <div class="body-wrapper">
- 
-       <!--  Header Start -->
-       <header class="app-header"></header>
-       <!--  Header End -->
+        <!--  Header Start -->
+        <header class="app-header">
+          <nav class="navbar navbar-expand-lg navbar-light">
+            <ul class="navbar-nav">
+              <li class="nav-item d-block d-xl-none">
+                <a class="nav-link sidebartoggler nav-icon-hover" id="headerCollapse" href="javascript:void(0)">
+                  <i class="ti ti-menu-2"></i>
+                </a>
+              </li>
+            </ul>
+            <div class="navbar-collapse justify-content-end px-0" id="navbarNav">
+              <ul class="navbar-nav flex-row ms-auto align-items-center justify-content-end">
+                <li class="nav-item dropdown">
+                  <a class="nav-link nav-icon-hover" href="javascript:void(0)" id="drop2" data-bs-toggle="dropdown"
+                    aria-expanded="false">
+                    <img src="https://euis.ulbi.ac.id/APPESI/assets/images/profile/user-1.jpg" alt="" width="35" height="35" class="rounded-circle">
+                  </a>
+                  <div class="dropdown-menu dropdown-menu-end dropdown-menu-animate-up" aria-labelledby="drop2">
+                    <div class="message-body text-center">
+                      <a href="javascript:void(0)" class="d-flex align-items-center gap-2 dropdown-item">
+                          <i class="ti ti-user fs-6"></i>
+                          <p class="mb-0 fs-3">Lihat Profil</p>
+                      </a>
+                      <button id="logoutBtn" class="btn btn-outline-primary mx-auto mt-2 d-block">Logout</button>
+                  </div>
+                  </div>
+                </li>
+              </ul>
+            </div>
+          </nav>
+        </header>
+        <!--  Header End -->
+      
 
       <div class="container-fluid">
         <h6 class="right-aligned" style="float: right">
@@ -125,19 +305,17 @@
           </div>
         </div>
       </div>
-  </div>
+    </div>
   <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
   <script src="../static/dosen/input_nilai_p3.js" type="module"></script>
-  <script src="../static/theme/bar/navbar.js" type="module"></script>
-  <script src="../static/theme/bar/sidebar.js" type="module"></script>
+  <!-- <script src="../static/theme/bar/navbar.js" type="module"></script> -->
+  <!-- <script src="../static/theme/bar/sidebar.js" type="module"></script> -->
   <script src="../static/style/style_input_nilai_p3.js"></script>
   <script src="../assets/libs/jquery/dist/jquery.min.js"></script>
   <script src="../assets/libs/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
   <script src="../assets/js/sidebarmenu.js"></script>
   <script src="../assets/js/app.min.js"></script>
-  <script src="../assets/libs/apexcharts/dist/apexcharts.min.js"></script>
   <script src="../assets/libs/simplebar/dist/simplebar.js"></script>
-  <script src="../assets/js/dashboard.js"></script>
 </body>
 
 </html>
