--- a/dosen/input_nilai_p3.html
+++ b/dosen/input_nilai_p3.html
@@ -14,7 +14,7 @@
   <div class="page-wrapper" id="main-wrapper" data-layout="vertical" data-navbarbg="skin6" data-sidebartype="full"
     data-sidebar-position="fixed" data-header-position="fixed">
       <!-- Sidebar Start -->
-      <aside class="left-sidebar" id="sidebar">
+      <aside class="left-sidebar">
         <!-- Sidebar Dosen Start -->
           <!-- Sidebar scroll-->
           <div>
