hide js sidebar & navbar di menu utama

--- a/nilai_sidang_internship.html
+++ b/nilai_sidang_internship.html
@@ -248,8 +248,8 @@
   </div>
   <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
   <script src="static/style/style_nilai_sidang_internship.js"></script>
-  <script src="static/theme/bar/navbar.js" type="module"></script>
-  <script src="static/theme/bar/sidebar.js" type="module"></script>
+  <!-- <script src="static/theme/bar/navbar.js" type="module"></script>
+  <script src="static/theme/bar/sidebar.js" type="module"></script> -->
   <script src="assets/libs/jquery/dist/jquery.min.js"></script>
   <script src="assets/libs/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
 </body>
