--- a/index.html
+++ b/index.html
@@ -271,8 +271,8 @@
   </div>
   <!-- <script src="static/controller/logout.js" type="module"></script> -->
   <script src="static/index.js" type="module"></script>
-  <script src="static/theme/bar/navbar.js" type="module"></script>
-  <script src="static/theme/bar/sidebar.js" type="module"></script>
+  <!-- <script src="static/theme/bar/navbar.js" type="module"></script>
+  <script src="static/theme/bar/sidebar.js" type="module"></script> -->
   <script src="assets/libs/jquery/dist/jquery.min.js"></script>
   <script src="assets/libs/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
 </body>
