--- a/revisi_sidang.html
+++ b/revisi_sidang.html
@@ -256,8 +256,8 @@
       </div>
   </div>
   <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
-  <script src="static/theme/bar/sidebar.js" type="module"></script>
-  <script src="static/theme/bar/navbar.js" type="module"></script>
+  <!-- <script src="static/theme/bar/sidebar.js" type="module"></script>
+  <script src="static/theme/bar/navbar.js" type="module"></script> -->
   <script src="static/revisi_sidang.js" type="module"></script>
   <script src="static/style_revisi_sidang.js"></script>
   <script src="assets/libs/jquery/dist/jquery.min.js"></script>
