--- a/revisi_sidang.html
+++ b/revisi_sidang.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>APPESI ULBI</title>
+  <title>Revisi Sidang | APPESI ULBI</title>
   <link rel="shortcut icon" type="image/png" href="assets/images/logos/favicon-ulbi.png" />
   <link rel="stylesheet" href="assets/css/styles.min.css" />
 </head>
