hiding menu di hal dosen

--- a/dosen/input_nilai_p3.html
+++ b/dosen/input_nilai_p3.html
@@ -93,14 +93,14 @@
                     <span class="hide-menu">Proyek</span>
                   </a>
                 </li>
-                <li class="sidebar-item">
+                <!-- <li class="sidebar-item">
                   <a class="sidebar-link" href="https://euis.ulbi.ac.id/revisi" aria-expanded="false">
                     <span>
                       <i class="ti ti-presentation-analytics"></i>
                     </span>
                     <span class="hide-menu">Revisi sidang & Input Nilai sidang</span>
                   </a>
-                </li>
+                </li> -->
                 <!-- <li class="sidebar-item">
                   <a class="sidebar-link" href="#" aria-expanded="false">
                     <span>
