--- a/dosen/input_nilai_p3_test.html
+++ b/dosen/input_nilai_p3_test.html
@@ -219,13 +219,16 @@
                   <form id="formInputBE">
                     <h5 class="card-title fw-semibold mb-4">Penilaian Backend Developer</h5>
                       <div class="row">
-                        <!-- NPM -->
+                        <!-- NPM Dropdown -->
                         <div class="col-md-6">
                           <div class="mb-3">
-                            <label for="inputNPMBE" class="form-label">NPM</label>
-                            <input type="text" class="form-control" id="inputNPMBE" placeholder="Masukkan NPM">
+                            <label for="inputNPMBE" class="form-label">Mahasiswa</label>
+                            <select class="form-select" id="inputNPMBE">
+
+                            </select>
                           </div>
                         </div>
+
                         <!-- Tahun Akademik -->
                         <div class="col-md-6">
                             <div class="mb-3">
@@ -261,11 +264,13 @@
                   <form id="inputFormFE">
                     <h5 class="card-title fw-semibold mb-4 mt-4">Penilaian Front End Developer</h5>
                       <div class="row">
-                        <!-- NPM -->
+                        <!-- NPM Dropdown -->
                         <div class="col-md-6">
                           <div class="mb-3">
-                            <label for="inputNPMFE" class="form-label">NPM</label>
-                            <input type="text" class="form-control" id="inputNPMFE" placeholder="Masukkan NPM">
+                            <label for="inputNPMFE" class="form-label">Mahasiswa</label>
+                            <select class="form-select" id="inputNPMFE">
+
+                            </select>
                           </div>
                         </div>
                         <!-- Tahun Akademik -->
@@ -307,6 +312,7 @@
       </div>
     </div>
   <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+  <script src="../static/dosen/list_npm_p3.js" type="module"></script>
   <script src="../static/dosen/input_nilai_p3.js" type="module"></script>
   <!-- <script src="../static/theme/bar/navbar.js" type="module"></script> -->
   <!-- <script src="../static/theme/bar/sidebar.js" type="module"></script> -->
